--- a/src/style.css
+++ b/src/style.css
@@ -13,15 +13,14 @@ main .table {
   margin: 0 auto; }
   main .table tbody {
     font-size: 1.25em; }
-main button {
-  margin: 0 0 0.5% 10%; }
+main button.btn {
+  margin: 0.5% 0 0.5% 10%; }
+main button .add {
+  margin: none; }
 main section {
-  border: 2px solid #2980b9;
   margin: 1% 0 1% 10%;
   width: 80%;
   box-sizing: border-box; }
-  main section label {
-    width: 7%; }
   main section input {
     width: 100%; }
   main section input.ng-invalid.ng-touched {
